# sports-betting-aggregator

./: .gitignore  Current_state.MD  README.md  config.py  main.py  pyproject.toml
models/: __init__.py  pick_model.py
scrapers/: __init__.py  ats_scraper.py  base_scraper.py  covers_scraper.py  pickswise_scraper.py  vegasinsider_scraper.py  wagertalk_scraper.py
utils/: __init__.py  ai_helper.py  data_validator.py  rate_limiter.py
